--- a/modules/pom.xml
+++ b/modules/pom.xml
@@ -18,5 +18,6 @@
 		<module>freemarker-module</module>
 		<module>markedjs-module</module>
 		<module>pug-module</module>
+		<module>ui-module</module>
 	</modules>
 </project>
