--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,4 @@ cms-server/modules/markedjs-module
 cms-server/modules/pebble-module
 cms-server/modules/thymeleaf-module
 cms-server/modules/freemarker-module
+cms-server/modules/ui-module
