--- a/cms-server/pom.xml
+++ b/cms-server/pom.xml
@@ -40,6 +40,11 @@
 			<artifactId>jetty-server</artifactId>
 		</dependency>
 		<dependency>
+			<groupId>org.eclipse.jetty.ee10</groupId>
+			<artifactId>jetty-ee10-servlet</artifactId>
+			<version>12.0.3</version>
+		</dependency>
+		<dependency>
 			<groupId>org.projectlombok</groupId>
 			<artifactId>lombok</artifactId>
 			<scope>provided</scope>
