#61 ready to merge

--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,4 @@ cms-server/modules/pebble-module
 cms-server/modules/thymeleaf-module
 cms-server/modules/freemarker-module
 cms-server/modules/ui-module
+cms-server/modules/pug-module
