--- a/modules/search-module/pom.xml
+++ b/modules/search-module/pom.xml
@@ -32,6 +32,11 @@
 			<version>32.1.3-jre</version>
 		</dependency>
 		<dependency>
+			<groupId>org.jsoup</groupId>
+			<artifactId>jsoup</artifactId>
+			<version>1.16.2</version>
+		</dependency>
+		<dependency>
 			<groupId>com.google.code.gson</groupId>
 			<artifactId>gson</artifactId>
 			<version>2.10.1</version>
