--- a/modules/freemarker-module/pom.xml
+++ b/modules/freemarker-module/pom.xml
@@ -4,7 +4,7 @@
 	<parent>
 		<groupId>com.github.thmarx.cms.modules</groupId>
 		<artifactId>cms-modules</artifactId>
-		<version>2.7.0</version>
+		<version>2.7.0-SNAPSHOT</version>
 	</parent>
 	<artifactId>freemarker-module</artifactId>
 	<packaging>jar</packaging>
@@ -30,6 +30,11 @@
 			<groupId>org.freemarker</groupId>
 			<artifactId>freemarker</artifactId>
 			<version>2.3.32</version>
+		</dependency>
+		<dependency>
+			<groupId>org.projectlombok</groupId>
+			<artifactId>lombok</artifactId>
+			<scope>provided</scope>
 		</dependency>
 		
 	</dependencies>
