--- a/cms-server/pom.xml
+++ b/cms-server/pom.xml
@@ -33,6 +33,10 @@
 			<groupId>com.github.thmarx.cms</groupId>
 			<artifactId>cms-media</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>com.github.thmarx.cms</groupId>
+			<artifactId>cms-git</artifactId>
+		</dependency>
 		
 		<dependency>
 			<groupId>org.yaml</groupId>
