--- a/cms-server/hosts/demo/site.yaml
+++ b/cms-server/hosts/demo/site.yaml
@@ -11,6 +11,16 @@ modules:
   active:
     - markedjs-module
     - seo-module
+taxonomy:
+  template: taxonomy.html
+  taxonomies:
+    - title: Kategorie
+      slug: kategorien
+      field: taxonomy.category
+    - title: Tags
+      slug: tags
+      field: taxonomy.tags
+      array: true
 media:
   formats:
     - name: small
