--- a/cms-api/pom.xml
+++ b/cms-api/pom.xml
@@ -40,5 +40,9 @@
 			<groupId>org.slf4j</groupId>
 			<artifactId>slf4j-api</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>com.google.inject</groupId>
+			<artifactId>guice</artifactId>
+		</dependency>
 	</dependencies>
 </project>
