--- a/modules/forms-module/pom.xml
+++ b/modules/forms-module/pom.xml
@@ -5,7 +5,7 @@
 	<parent>
 		<groupId>com.github.thmarx.cms.modules</groupId>
 		<artifactId>cms-modules</artifactId>
-		<version>3.3.0</version>
+		<version>4.0.0-SNAPSHOT</version>
 	</parent>
 	
 	<artifactId>forms-module</artifactId>
@@ -85,7 +85,7 @@
 			<scope>provided</scope>
 		</dependency>
 		<dependency>
-			<groupId>com.github.thmarx.cms.modules.framework</groupId>
+			<groupId>com.github.thmarx.cms.module.framework</groupId>
 			<artifactId>modules-api</artifactId>
 			<scope>provided</scope>
 		</dependency>
