--- a/cms-server/hosts/demo/site.yaml
+++ b/cms-server/hosts/demo/site.yaml
@@ -4,7 +4,7 @@ hostname:
   - localhost1
 baseurl: "http://localhost:1010"
 language: en
-test: Hallo1
+test: Hallo
 markdown:
   engine: markedj
 theme: default
