update readme and build script for first release with no build structure

--- a/.gitignore
+++ b/.gitignore
@@ -32,3 +32,5 @@ cms-server/modules/seo-module
 cms-server/modules/forms-module
 cms-server/modules/markedj-module
 /distribution/temp/
+/distribution/build/
+/distribution/dist/
