--- a/pom.xml
+++ b/pom.xml
@@ -26,7 +26,7 @@
 		<module>cms-content</module>
 		<module>cms-extensions</module>
 		<module>cms-auth</module>
-	 <module>integration-tests</module>
+		<module>integration-tests</module>
 	</modules>
 	<inceptionYear>2023</inceptionYear>
 	<organization>
@@ -128,6 +128,22 @@
 				<groupId>com.google.inject</groupId>
 				<artifactId>guice</artifactId>
 				<version>7.0.0</version>
+			</dependency>
+
+			<dependency>
+				<groupId>org.apache.lucene</groupId>
+				<artifactId>lucene-core</artifactId>
+				<version>9.11.1</version>
+			</dependency>
+			<dependency>
+				<groupId>org.apache.lucene</groupId>
+				<artifactId>lucene-analysis-common</artifactId>
+				<version>9.11.1</version>
+			</dependency>
+			<dependency>
+				<groupId>com.h2database</groupId>
+				<artifactId>h2-mvstore</artifactId>
+				<version>2.2.224</version>
 			</dependency>
 
 			<dependency>
