--- a/cms-server/pom.xml
+++ b/cms-server/pom.xml
@@ -115,6 +115,12 @@
 			<artifactId>stormpot</artifactId>
 		</dependency>
 		
+		<dependency>
+			<groupId>org.apache.commons</groupId>
+			<artifactId>commons-text</artifactId>
+			<scope>test</scope>
+		</dependency>
+		
 	</dependencies>
 
 	<build>
