--- a/distribution/build.xml
+++ b/distribution/build.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project name="distribution" default="distribution" basedir=".">
-	<property name="cms.version">6.0.0</property>
+	<property name="cms.version">6.0.0-SNAPSHOT</property>
 	
 	<property name="thymeleaf.version">v2.0.0</property>
 		
@@ -46,7 +46,7 @@
 	</target>
 	
 	<target name="distribution" depends="clean,download-modules,unzip-modules,copy-server">
-		<zip destfile="dist/cms-server-${cms.version}.zip">
+		<zip destfile="dist/condation-server-${cms.version}.zip">
 			<fileset dir="build/"/>
 			<fileset dir="../" includes="README.md"/>
 		</zip>		
