--- a/pom.xml
+++ b/pom.xml
@@ -190,6 +190,11 @@
 				<artifactId>commons-text</artifactId>
 				<version>1.12.0</version>
 			</dependency>
+			<dependency>
+				<groupId>org.apache.commons</groupId>
+				<artifactId>commons-lang3</artifactId>
+				<version>3.17.0</version>
+			</dependency>
 			
 			<!-- object pool -->
 			<dependency>
