--- a/cms-git/pom.xml
+++ b/cms-git/pom.xml
@@ -4,7 +4,7 @@
 	<parent>
 		<groupId>com.condation.cms</groupId>
 		<artifactId>cms-parent</artifactId>
-		<version>6.0.0-SNAPSHOT</version>
+		<version>6.0.0</version>
 	</parent>
 	<artifactId>cms-git</artifactId>
 	<packaging>jar</packaging>
