--- a/modules-framework/manager/pom.xml
+++ b/modules-framework/manager/pom.xml
@@ -4,7 +4,7 @@
 	<parent>
 		<groupId>com.condation.cms.module.framework</groupId>
 		<artifactId>module-framework</artifactId>
-		<version>6.0.0-SNAPSHOT</version>
+		<version>6.0.0</version>
 	</parent>
 	<artifactId>modules-manager</artifactId>
 	<packaging>jar</packaging>
