--- a/modules/pom.xml
+++ b/modules/pom.xml
@@ -4,7 +4,7 @@
 	<parent>
 		<groupId>com.condation.cms</groupId>
 		<artifactId>cms-parent</artifactId>
-		<version>6.0.0-SNAPSHOT</version>
+		<version>6.0.0</version>
 	</parent>
 	<groupId>com.condation.cms.modules</groupId>
 	<artifactId>cms-modules</artifactId>
