--- a/pom.xml
+++ b/pom.xml
@@ -112,6 +112,12 @@
 			</dependency>
 			
 			<dependency>
+				<groupId>org.apache.commons</groupId>
+				<artifactId>commons-jexl3</artifactId>
+				<version>3.4.0</version>
+			</dependency>
+			
+			<dependency>
 				<groupId>com.github.slugify</groupId>
 				<artifactId>slugify</artifactId>
 				<version>3.0.7</version>
