--- a/pom.xml
+++ b/pom.xml
@@ -148,6 +148,11 @@
 				<version>2.3</version>            
 			</dependency>
 			<dependency>
+				<groupId>org.tomlj</groupId>
+				<artifactId>tomlj</artifactId>
+				<version>1.1.1</version>
+			</dependency>
+			<dependency>
 				<groupId>org.eclipse.jetty</groupId>
 				<artifactId>jetty-server</artifactId>
 				<version>${jetty.version}</version>
