--- a/cms-server/pom.xml
+++ b/cms-server/pom.xml
@@ -51,6 +51,12 @@
 		</dependency>
 		
 		<dependency>
+			<groupId>com.condation.cms</groupId>
+			<artifactId>cms-test</artifactId>
+			<scope>test</scope>
+		</dependency>
+		
+		<dependency>
 			<groupId>org.yaml</groupId>
 			<artifactId>snakeyaml</artifactId>
 		</dependency>
