--- a/cms-sandbox/pom.xml
+++ b/cms-sandbox/pom.xml
@@ -4,11 +4,12 @@
     <parent>
         <groupId>com.condation.cms</groupId>
         <artifactId>cms-parent</artifactId>
-        <version>6.4.0</version>
+        <version>7.2.0</version>
     </parent>
     <artifactId>cms-sandbox</artifactId>
     <packaging>pom</packaging>
     <modules>
         <module>tests</module>
+        <module>templates</module>
     </modules>
 </project>
