--- a/cms-sandbox/pom.xml
+++ b/cms-sandbox/pom.xml
@@ -12,4 +12,13 @@
         <module>tests</module>
         <module>templates</module>
     </modules>
+
+    <dependencies>
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter-engine</artifactId>
+            <scope>test</scope>
+            <version>5.11.3</version>
+        </dependency>
+    </dependencies>
 </project>
