--- a/modules/system-modules/pom.xml
+++ b/modules/system-modules/pom.xml
@@ -2,16 +2,17 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
-		<groupId>com.condation.cms</groupId>
-		<artifactId>cms-parent</artifactId>
+		<groupId>com.condation.cms.modules</groupId>
+		<artifactId>cms-modules</artifactId>
 		<version>7.2.0</version>
 	</parent>
-	<groupId>com.condation.cms.modules</groupId>
-	<artifactId>cms-modules</artifactId>
-	<packaging>pom</packaging>
-	
-	<modules>
-		<module>example-module</module>
-	 <module>system-modules</module>
-	</modules>
+	<artifactId>cms-system-modules</artifactId>
+	<packaging>jar</packaging>
+    
+	<dependencies>
+		<dependency>
+			<groupId>com.condation.cms</groupId>
+			<artifactId>cms-api</artifactId>
+		</dependency>
+	</dependencies>
 </project>
