--- a/cms-sandbox/pom.xml
+++ b/cms-sandbox/pom.xml
@@ -11,6 +11,7 @@
     <modules>
         <module>tests</module>
         <module>templates</module>
+        <module>benchmark</module>
     </modules>
 
     <dependencies>
@@ -18,7 +19,6 @@
             <groupId>org.junit.jupiter</groupId>
             <artifactId>junit-jupiter-engine</artifactId>
             <scope>test</scope>
-            <version>5.11.3</version>
         </dependency>
     </dependencies>
 </project>
