--- a/cms-api/pom.xml
+++ b/cms-api/pom.xml
@@ -16,7 +16,7 @@
 			<scope>provided</scope>
 		</dependency>
 		<dependency>
-			<groupId>com.condation.cms.module.framework</groupId>
+			<groupId>com.condation.modules.framework</groupId>
 			<artifactId>modules-api</artifactId>
 		</dependency>
 		<dependency>
