--- a/cms-server/pom.xml
+++ b/cms-server/pom.xml
@@ -108,7 +108,7 @@
 		</dependency>
 
 		<dependency>
-			<groupId>com.condation.cms.module.framework</groupId>
+			<groupId>com.condation.modules.framework</groupId>
 			<artifactId>modules-manager</artifactId>
 		</dependency>
 		
