--- a/modules/example-module/pom.xml
+++ b/modules/example-module/pom.xml
@@ -21,7 +21,7 @@
 			<scope>provided</scope>
 		</dependency>
 		<dependency>
-			<groupId>com.condation.cms.module.framework</groupId>
+			<groupId>com.condation.modules.framework</groupId>
 			<artifactId>modules-api</artifactId>
 			<scope>provided</scope>
 		</dependency>
