--- a/cms-templates/pom.xml
+++ b/cms-templates/pom.xml
@@ -27,6 +27,10 @@
 		</dependency>
 		<dependency>
 			<groupId>com.condation.cms</groupId>
+			<artifactId>cms-content</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>com.condation.cms</groupId>
 			<artifactId>cms-core</artifactId>
 			<scope>test</scope>
 		</dependency>
