--- a/modules/pom.xml
+++ b/modules/pom.xml
@@ -13,5 +13,6 @@
 	<modules>
 		<module>example-module</module>
 		<module>system-modules</module>
+		<module>ui-module</module>
 	</modules>
 </project>
