--- a/cms-api/pom.xml
+++ b/cms-api/pom.xml
@@ -28,6 +28,10 @@
 			<artifactId>snakeyaml</artifactId>
 		</dependency>
 		<dependency>
+			<groupId>com.google.code.gson</groupId>
+			<artifactId>gson</artifactId>
+		</dependency>
+		<dependency>
 			<groupId>org.eclipse.jetty</groupId>
 			<artifactId>jetty-http</artifactId>
 			<version>${jetty.version}</version>
