--- a/modules/ui-module/pom.xml
+++ b/modules/ui-module/pom.xml
@@ -15,6 +15,11 @@
 			<artifactId>cms-api</artifactId>
 		</dependency>
 		<dependency>
+			<groupId>org.apache.tika</groupId>
+			<artifactId>tika-core</artifactId>
+			<version>3.1.0</version>
+		</dependency>
+		<dependency>
 			<groupId>com.condation.cms</groupId>
 			<artifactId>cms-filesystem</artifactId>
 		</dependency>
