start implementation for ui auth

--- a/test-server/hosts/demo/config/auth.yaml
+++ b/test-server/hosts/demo/config/auth.yaml
@@ -1,4 +1,4 @@
-paths:
-    - path: "/manager"
-      realm: "users"
-      groups: ["manager"]
+# paths:
+#     - path: "/manager"
+#       realm: "users"
+#       groups: ["manager"]
