add ui preview filter to enable preview for prod if manager login is available

--- a/test-server/hosts/demo/site.toml
+++ b/test-server/hosts/demo/site.toml
@@ -3,4 +3,4 @@ hostname = [ "localhost" ]
 baseurl = "http://localhost:2020"
 language = "en"
 theme = "demo"
-context_path = "/de"
+context_path = "/"
