--- a/distribution/build.xml
+++ b/distribution/build.xml
@@ -21,12 +21,24 @@
 				<file file="../LICENSE"/>
 			</resources>
 		</copy>
+		<copy todir="dist/">
+			<fileset dir="scripts/">
+				<include name="start.sh"/>
+				<include name="start.bat"/>
+			</fileset>
+			<filterchain>
+				<replacetokens>
+					<token key="CMS_VERSION" value="${cms.version}"/>
+				</replacetokens>
+			</filterchain>
+		</copy>
+		<fixcrlf srcdir="dist" includes="start.sh" eol="unix"/>
 	</target>
 	
 	<target name="download-jre" description="--> download jres">
 		<get skipexisting="true" src="https://github.com/adoptium/temurin21-binaries/releases/download/jdk-21.0.7%2B6/OpenJDK21U-jre_aarch64_mac_hotspot_21.0.7_6.tar.gz" dest="temp/OpenJDK21U-jre_aarch64_mac_hotspot_21.0.7_6.tar.gz"></get>
-		<get skipexisting="true" src="https://github.com/adoptium/temurin21-binaries/releases/download/jdk-21.0.7%2B6/OpenJDK21U-jre_aarch64_windows_hotspot_21.0.7_6.zip" dest="temp/OpenJDK21U-jre_aarch64_windows_hotspot_21.0.7_6.zip"></get>
-		<get skipexisting="true" src="https://github.com/adoptium/temurin21-binaries/releases/download/jdk-21.0.7%2B6/OpenJDK21U-jre_aarch64_linux_hotspot_21.0.7_6.tar.gz" dest="temp/OpenJDK21U-jre_aarch64_linux_hotspot_21.0.7_6.tar.gz"></get>
+		<get skipexisting="true" src="https://github.com/adoptium/temurin21-binaries/releases/download/jdk-21.0.7%2B6/OpenJDK21U-jre_x64_windows_hotspot_21.0.7_6.zip" dest="temp/OpenJDK21U-jre_x64_windows_hotspot_21.0.7_6.zip"></get>
+		<get skipexisting="true" src="https://github.com/adoptium/temurin21-binaries/releases/download/jdk-21.0.7%2B6/OpenJDK21U-jre_x64_linux_hotspot_21.0.7_6.tar.gz" dest="temp/OpenJDK21U-jre_x64_linux_hotspot_21.0.7_6.tar.gz"></get>
 	</target>
 
 	<target name="clean">
@@ -40,8 +52,9 @@
 	</target>
 	
 	<target name="dist-mac" description="--> build mac distribution">
+		<echo>build mac distribution</echo>
+
 		<mkdir dir="dist/mac"/>
-		<mkdir dir="dist/mac/java-temp"/>
 
 		<!-- Kopiere Build-Inhalt -->
 		<copy todir="dist/mac">
@@ -50,52 +63,47 @@
 
 		<!-- Entpacke JRE temporär -->
 		<untar src="temp/OpenJDK21U-jre_aarch64_mac_hotspot_21.0.7_6.tar.gz"
-			   dest="dist/mac/java-temp"
+			   dest="dist/java/mac"
 			   compression="gzip"/>
 
-		<!-- Verschiebe Inhalt aus Contents/Home in java -->
-		<move todir="dist/mac/java">
-			<fileset dir="dist/mac/java-temp/jdk-21.0.7+6-jre/Contents/Home"/>
-		</move>
-
-		<!-- temporären JRE-Entpack-Ordner löschen -->
-		<delete dir="dist/mac/java-temp"/>
-
-		<!-- Startskript kopieren und ausführbar machen -->
-		<copy file="scripts/start.sh" tofile="dist/mac/start.sh"/>
-		<chmod file="dist/mac/start.sh" perm="755"/>
-		<chmod file="dist/mac/java/bin/java" perm="755"/>
+		<tar destfile="dist/condation-server-mac-aarch64-${cms.version}.tar.gz" compression="gzip">
+			<tarfileset dir="dist/mac" prefix="condation-server"/>
+			<tarfileset file="dist/start.sh" mode="755" fullpath="condation-server/start.sh"/>
+			<tarfileset dir="dist/java/mac/jdk-21.0.7+6-jre/Contents/Home/" prefix="condation-server/java">
+				<exclude name="bin/java"/>
+			</tarfileset>
+			<tarfileset file="dist/java/mac/jdk-21.0.7+6-jre/Contents/Home/bin/java" mode="755" fullpath="condation-server/java/bin/java"/>
+			<tarfileset dir="../" includes="README.md" prefix="condation-server"/>
+			<tarfileset dir="../" includes="CHANGELOG.md" prefix="condation-server"/>
+		</tar>
 	</target>
 	
 	<target name="dist-win" description="--> build windows distribution">
-		<mkdir dir="dist/win"/>
-		<mkdir dir="dist/win/java-temp"/>
+		<echo>build windows distribution</echo>
 
+		<mkdir dir="dist/win"/>
 		<!-- Kopiere Build-Inhalt -->
 		<copy todir="dist/win">
 			<fileset dir="build"/>
 		</copy>
 
 		<!-- Entpacke JRE temporär -->
-		<unzip src="temp/OpenJDK21U-jre_aarch64_windows_hotspot_21.0.7_6.zip"
-			   dest="dist/win/java-temp"
+		<unzip src="temp/OpenJDK21U-jre_x64_windows_hotspot_21.0.7_6.zip"
+			   dest="dist/java/win"
 		/>
 
-		<!-- Verschiebe Inhalt aus Contents/Home in java -->
-		<move todir="dist/win/java">
-			<fileset dir="dist/win/java-temp/jdk-21.0.7+6-jre"/>
-		</move>
-
-		<!-- temporären JRE-Entpack-Ordner löschen -->
-		<delete dir="dist/win/java-temp"/>
-
-		<!-- Startskript kopieren und ausführbar machen -->
-		<copy file="scripts/start.bat" tofile="dist/win/start.bat"/>
+		<tar destfile="dist/condation-server-win-x64-${cms.version}.tar.gz" compression="gzip">
+			<tarfileset dir="dist/win" prefix="condation-server"/>
+			<tarfileset dir="dist/java/win/jdk-21.0.7+6-jre/" prefix="condation-server/java" />
+			<tarfileset dir="../" includes="README.md" prefix="condation-server"/>
+			<tarfileset dir="../" includes="CHANGELOG.md" prefix="condation-server"/>
+		</tar>
 	</target>
 
 	<target name="dist-linux" depends="download-jre" description="--> build linux distribution">
+		<echo>build linux distribution</echo>
+
 		<mkdir dir="dist/linux"/>
-		<mkdir dir="dist/linux/java-temp"/>
 
 		<!-- Kopiere Build-Inhalt -->
 		<copy todir="dist/linux">
@@ -103,43 +111,24 @@
 		</copy>
 
 		<!-- Entpacke JRE temporär -->
-		<untar src="temp/OpenJDK21U-jre_aarch64_linux_hotspot_21.0.7_6.tar.gz"
-			   dest="dist/linux/java-temp"
+		<untar src="temp/OpenJDK21U-jre_x64_linux_hotspot_21.0.7_6.tar.gz"
+			   dest="dist/java/linux"
 			   compression="gzip"
 		/>
-
-		<!-- Verschiebe Inhalt aus Contents/Home in java -->
-		<move todir="dist/linux/java">
-			<fileset dir="dist/linux/java-temp/jdk-21.0.7+6-jre/"/>
-		</move>
-
-		<!-- temporären JRE-Entpack-Ordner löschen -->
-		<delete dir="dist/linux/java-temp"/>
-
-		<!-- Startskript kopieren und ausführbar machen -->
-		<copy file="scripts/start.sh" tofile="dist/win/start.sh"/>
-		<chmod file="dist/linux/start.sh" perm="755"/>
-		<chmod file="dist/linux/java/bin/java" perm="755"/>
+		
+		<tar destfile="dist/condation-server-linux-x64-${cms.version}.tar.gz" compression="gzip">
+			<tarfileset dir="dist/linux" prefix="condation-server"/>
+			<tarfileset file="dist/start.sh" mode="755" fullpath="condation-server/start.sh"/>
+			<tarfileset dir="dist/java/linux/jdk-21.0.7+6-jre/" prefix="condation-server/java">
+				<exclude name="bin/java"/>
+			</tarfileset>
+			<tarfileset file="dist/java/linux/jdk-21.0.7+6-jre/bin/java" mode="755" fullpath="condation-server/java/bin/java"/>
+			<tarfileset dir="../" includes="README.md" prefix="condation-server"/>
+			<tarfileset dir="../" includes="CHANGELOG.md" prefix="condation-server"/>
+		</tar>
 	</target>
 	
 	<target name="distribution" depends="clean,download-jre,copy-server,dist-linux,dist-win,dist-mac">
-		<echo>build linux distribution</echo>
-		<tar destfile="dist/condation-server-linux-${cms.version}.tar.gz" compression="gzip">
-			<fileset dir="dist/linux"/>
-			<fileset dir="../" includes="README.md"/>
-			<fileset dir="../" includes="CHANGELOG.md"/>
-		</tar>
-		<echo>build windows distribution</echo>
-		<zip destfile="dist/condation-server-win-${cms.version}.zip">
-			<fileset dir="dist/win"/>
-			<fileset dir="../" includes="README.md"/>
-			<fileset dir="../" includes="CHANGELOG.md"/>
-		</zip>
-		<echo>build mac distribution</echo>
-		<tar destfile="dist/condation-server-mac-${cms.version}.tar.gz" compression="gzip">
-			<fileset dir="dist/mac"/>
-			<fileset dir="../" includes="README.md"/>
-			<fileset dir="../" includes="CHANGELOG.md"/>
-		</tar>
+		<echo>create binary distributions</echo>
 	</target>
 </project>
