optional 2fa added

--- a/.gitignore
+++ b/.gitignore
@@ -65,3 +65,4 @@ test-server/modules/markedj-module
 test-server/cms.pid
 test-server/hosts/features/data/
 .DS_Store
+test-server/mail-server/fake-smtp-server-2.4.2.jar
