unify dist build script add info command for server (version and state)

--- a/distribution/build.xml
+++ b/distribution/build.xml
@@ -39,6 +39,7 @@
 		<get skipexisting="true" src="https://github.com/adoptium/temurin21-binaries/releases/download/jdk-21.0.7%2B6/OpenJDK21U-jre_aarch64_mac_hotspot_21.0.7_6.tar.gz" dest="temp/OpenJDK21U-jre_aarch64_mac_hotspot_21.0.7_6.tar.gz"></get>
 		<get skipexisting="true" src="https://github.com/adoptium/temurin21-binaries/releases/download/jdk-21.0.7%2B6/OpenJDK21U-jre_x64_windows_hotspot_21.0.7_6.zip" dest="temp/OpenJDK21U-jre_x64_windows_hotspot_21.0.7_6.zip"></get>
 		<get skipexisting="true" src="https://github.com/adoptium/temurin21-binaries/releases/download/jdk-21.0.7%2B6/OpenJDK21U-jre_x64_linux_hotspot_21.0.7_6.tar.gz" dest="temp/OpenJDK21U-jre_x64_linux_hotspot_21.0.7_6.tar.gz"></get>
+		<get skipexisting="true" src="https://github.com/adoptium/temurin21-binaries/releases/download/jdk-21.0.7%2B6/OpenJDK21U-jre_aarch64_linux_hotspot_21.0.7_6.tar.gz" dest="temp/OpenJDK21U-jre_aarch64_linux_hotspot_21.0.7_6.tar.gz"></get>
 	</target>
 
 	<target name="clean">
@@ -51,84 +52,99 @@
 		<mkdir  dir="build/modules/" />
 	</target>
 	
-	<target name="dist-mac" description="--> build mac distribution">
-		<echo>build mac distribution</echo>
+	<target name="dist" description="--> build linux distribution">
+		<echo>build ${system.name} ${system.arch} distribution </echo>
 
-		<mkdir dir="dist/mac"/>
-
-		<!-- Kopiere Build-Inhalt -->
-		<copy todir="dist/mac">
-			<fileset dir="build"/>
-		</copy>
-
-		<!-- Entpacke JRE temporär -->
-		<untar src="temp/OpenJDK21U-jre_aarch64_mac_hotspot_21.0.7_6.tar.gz"
-			   dest="dist/java/mac"
-			   compression="gzip"/>
-
-		<tar destfile="dist/condation-server-mac-aarch64-${cms.version}.tar.gz" compression="gzip">
-			<tarfileset dir="dist/mac" prefix="condation-server"/>
-			<tarfileset file="dist/server.sh" mode="755" fullpath="condation-server/server.sh"/>
-			<tarfileset dir="dist/java/mac/jdk-21.0.7+6-jre/Contents/Home/" prefix="condation-server/java">
-				<exclude name="bin/java"/>
-			</tarfileset>
-			<tarfileset file="dist/java/mac/jdk-21.0.7+6-jre/Contents/Home/bin/java" mode="755" fullpath="condation-server/java/bin/java"/>
-			<tarfileset dir="../" includes="README.md" prefix="condation-server"/>
-			<tarfileset dir="../" includes="CHANGELOG.md" prefix="condation-server"/>
-		</tar>
-	</target>
-	
-	<target name="dist-win" description="--> build windows distribution">
-		<echo>build windows distribution</echo>
-
-		<mkdir dir="dist/win"/>
-		<!-- Kopiere Build-Inhalt -->
-		<copy todir="dist/win">
-			<fileset dir="build"/>
-		</copy>
-
-		<!-- Entpacke JRE temporär -->
-		<unzip src="temp/OpenJDK21U-jre_x64_windows_hotspot_21.0.7_6.zip"
-			   dest="dist/java/win"
-		/>
-
-		<tar destfile="dist/condation-server-win-x64-${cms.version}.tar.gz" compression="gzip">
-			<tarfileset dir="dist/win" prefix="condation-server"/>
-			<tarfileset dir="dist/java/win/jdk-21.0.7+6-jre/" prefix="condation-server/java" />
-			<tarfileset dir="../" includes="README.md" prefix="condation-server"/>
-			<tarfileset dir="../" includes="CHANGELOG.md" prefix="condation-server"/>
-		</tar>
-	</target>
-
-	<target name="dist-linux" depends="download-jre" description="--> build linux distribution">
-		<echo>build linux distribution</echo>
-
-		<mkdir dir="dist/linux"/>
-
-		<!-- Kopiere Build-Inhalt -->
-		<copy todir="dist/linux">
-			<fileset dir="build"/>
-		</copy>
-
-		<!-- Entpacke JRE temporär -->
-		<untar src="temp/OpenJDK21U-jre_x64_linux_hotspot_21.0.7_6.tar.gz"
-			   dest="dist/java/linux"
-			   compression="gzip"
-		/>
+		<property name="dist.path">dist/${system.name}_${system.arch}</property>
+		<property name="dist.java.path">dist/java/${system.name}_${system.arch}</property>
+		<property name="dist.name">condation-server-${system.name}-${system.arch}-${cms.version}</property>
 		
-		<tar destfile="dist/condation-server-linux-x64-${cms.version}.tar.gz" compression="gzip">
-			<tarfileset dir="dist/linux" prefix="condation-server"/>
+		<property name="java.filename">OpenJDK21U-jre_${system.arch}_${system.name}_hotspot_21.0.7_6</property>
+		
+		
+		<condition property="is.windows">
+			<equals arg1="${system.name}" arg2="windows"/>
+		</condition>
+
+		<mkdir dir="${dist.path}"/>
+
+		<!-- Kopiere Build-Inhalt -->
+		<copy todir="${dist.path}">
+			<fileset dir="build"/>
+		</copy>
+
+		<!-- Entpacke JRE temporär -->
+		<antcall target="unpack-java-tgz" />
+		<antcall target="unpack-java-zip" />
+		
+		
+		<antcall target="package-zip"/>
+		<antcall target="package-tar"/>
+	</target>
+	
+	<target name="unpack-java-tgz" unless="is.windows">
+		<untar src="temp/${java.filename}.tar.gz"
+			   dest="${dist.java.path}"
+			   compression="gzip"/>
+	</target>
+	
+	<target name="unpack-java-zip" if="is.windows">
+		<unzip src="temp/${java.filename}.zip"
+			   dest="${dist.java.path}"/>
+	</target>
+	
+	<target name="package-tar" unless="is.windows">
+		<tar destfile="dist/${dist.name}.tar.gz" compression="gzip">
+			<tarfileset dir="${dist.path}" prefix="condation-server"/>
 			<tarfileset file="dist/server.sh" mode="755" fullpath="condation-server/server.sh"/>
-			<tarfileset dir="dist/java/linux/jdk-21.0.7+6-jre/" prefix="condation-server/java">
+			<tarfileset dir="dist/java/${system.name}_${system.arch}/${java.path}/" prefix="condation-server/java">
 				<exclude name="bin/java"/>
 			</tarfileset>
-			<tarfileset file="dist/java/linux/jdk-21.0.7+6-jre/bin/java" mode="755" fullpath="condation-server/java/bin/java"/>
+			<tarfileset file="dist/java/${system.name}_${system.arch}/${java.path}/bin/java" mode="755" fullpath="condation-server/java/bin/java"/>
 			<tarfileset dir="../" includes="README.md" prefix="condation-server"/>
 			<tarfileset dir="../" includes="CHANGELOG.md" prefix="condation-server"/>
 		</tar>
 	</target>
+
+	<target name="package-zip" if="is.windows">
+		<zip destfile="dist/${dist.name}.zip">
+			<zipfileset dir="${dist.path}" prefix="condation-server"/>
+			<zipfileset file="dist/server.bat" fullpath="condation-server/server.bat"/>
+			<zipfileset dir="dist/java/${system.name}_${system.arch}/${java.path}/" prefix="condation-server/java">
+				<exclude name="bin/java"/>
+			</zipfileset>
+			<zipfileset file="dist/java/${system.name}_${system.arch}/${java.path}/bin/java" fullpath="condation-server/java/bin/java"/>
+			<zipfileset dir="../" includes="README.md" prefix="condation-server"/>
+			<zipfileset dir="../" includes="CHANGELOG.md" prefix="condation-server"/>
+		</zip>
+	</target>
 	
-	<target name="distribution" depends="clean,download-jre,copy-server,dist-linux,dist-win,dist-mac">
+	<target name="distribution" depends="clean,download-jre,copy-server">
+		
 		<echo>create binary distributions</echo>
+		
+		<antcall target="dist">
+			<param name="system.name" value="linux" />
+			<param name="system.arch" value="x64" />
+			<param name="java.path" value="jdk-21.0.7+6-jre" />
+		</antcall>
+		
+		<antcall target="dist">
+			<param name="system.name" value="linux" />
+			<param name="system.arch" value="aarch64" />
+			<param name="java.path" value="jdk-21.0.7+6-jre" />
+		</antcall>
+		
+		<antcall target="dist">
+			<param name="system.name" value="windows" />
+			<param name="system.arch" value="x64" />
+			<param name="java.path" value="jdk-21.0.7+6-jre" />
+		</antcall>
+		
+		<antcall target="dist">
+			<param name="system.name" value="mac" />
+			<param name="system.arch" value="aarch64" />
+			<param name="java.path" value="jdk-21.0.7+6-jre/Contents/Home" />
+		</antcall>
 	</target>
 </project>
