--- a/cms-core/pom.xml
+++ b/cms-core/pom.xml
@@ -32,6 +32,11 @@
 			<artifactId>caffeine</artifactId>
 		</dependency>
 		<dependency>
+			<groupId>org.apache.commons</groupId>
+			<artifactId>commons-compress</artifactId>
+			<version>1.27.1</version>
+		</dependency>
+		<dependency>
 			<groupId>org.quartz-scheduler</groupId>
 			<artifactId>quartz</artifactId>
 			<exclusions>
