--- a/modules/ui-module/src/main/ts/tsconfig.json
+++ b/modules/ui-module/src/main/ts/tsconfig.json
@@ -5,7 +5,7 @@
     "module": "esnext",
     "target": "es2020",
     "moduleResolution": "node",
-    "allowJs": false,
+    "allowJs": true,
     "checkJs": false,
     "lib": ["dom", "es2020"]
   },
