--- a/test-server/hosts/demo/site-dev.toml
+++ b/test-server/hosts/demo/site-dev.toml
@@ -4,8 +4,10 @@ hostname = [ "localhost5" ]
 enabled = true
 whitelist = ["meta.*", "title"]
 
-[ui.manager]
-enabled = true
+[ui]
+secret = "super-secret-token"
+managerEnabled = true
+
 
 [cache]
 enabled = false
