--- a/test-server/hosts/demo/site.toml
+++ b/test-server/hosts/demo/site.toml
@@ -7,6 +7,8 @@ context_path = "/"
 
 [ui]
 force2fa = false
+secret = "super-secret-token"
+managerEnabled = true
 
 [ui.2fa]
 mail_from = "admin@localhost.de"
