--- a/cms-server/pom.xml
+++ b/cms-server/pom.xml
@@ -78,6 +78,26 @@
 			<artifactId>jetty-server</artifactId>
 		</dependency>
 		<dependency>
+			<groupId>org.eclipse.jetty.compression</groupId>
+			<artifactId>jetty-compression-server</artifactId>
+			<version>${jetty.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.eclipse.jetty.compression</groupId>
+			<artifactId>jetty-compression-brotli</artifactId>
+			<version>${jetty.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.eclipse.jetty.compression</groupId>
+			<artifactId>jetty-compression-gzip</artifactId>
+			<version>${jetty.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.eclipse.jetty.compression</groupId>
+			<artifactId>jetty-compression-zstandard</artifactId>
+			<version>${jetty.version}</version>
+		</dependency>
+		<dependency>
 			<groupId>org.projectlombok</groupId>
 			<artifactId>lombok</artifactId>
 			<scope>provided</scope>
