fix cache config

--- a/test-server/hosts/demo/site.toml
+++ b/test-server/hosts/demo/site.toml
@@ -23,3 +23,6 @@ your login code: <code>
 enabled = true
 cron = "0 0 2 * * ?"
 target = "/Users/thorstenmarx/entwicklung/backups"
+
+[cache]
+content = true
