update for jdk 25 moved from threadlocal to scoped values

--- a/cms-api/pom.xml
+++ b/cms-api/pom.xml
@@ -8,8 +8,21 @@
 	</parent>
 	<artifactId>cms-api</artifactId>
 	<packaging>jar</packaging>
-	
-	<dependencies>
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.14.0</version>
+                <configuration>
+                    <compilerArgs>
+                        <arg>--enable-preview</arg>
+                    </compilerArgs>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
+    <dependencies>
 		<dependency>
 			<groupId>org.projectlombok</groupId>
 			<artifactId>lombok</artifactId>
