--- a/cms-content/pom.xml
+++ b/cms-content/pom.xml
@@ -10,8 +10,21 @@
 	</parent>
 	<artifactId>cms-content</artifactId>
 	<packaging>jar</packaging>
-
-	<dependencies>
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.11.0</version>
+                <configuration>
+                    <compilerArgs>
+                        <arg>--enable-preview</arg>
+                    </compilerArgs>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
+    <dependencies>
 		<dependency>
 			<groupId>com.condation.cms</groupId>
 			<artifactId>cms-api</artifactId>
