--- a/pom.xml
+++ b/pom.xml
@@ -195,6 +195,7 @@
 				<groupId>com.google.inject</groupId>
 				<artifactId>guice</artifactId>
 				<version>7.0.0</version>
+				<classifier>classes</classifier>
 			</dependency>
 
 			<dependency>
