--- a/cms-api/pom.xml
+++ b/cms-api/pom.xml
@@ -69,4 +69,7 @@
 			<version>9.8</version>
 		</dependency>
 	</dependencies>
+    <properties>
+        <maven.compiler.release>25</maven.compiler.release>
+    </properties>
 </project>
