--- a/cms-filesystem/pom.xml
+++ b/cms-filesystem/pom.xml
@@ -22,7 +22,10 @@
 			<groupId>com.h2database</groupId>
 			<artifactId>h2-mvstore</artifactId>
 		</dependency>
-		
+		<dependency>
+			<groupId>org.jsoup</groupId>
+			<artifactId>jsoup</artifactId>
+		</dependency>
 		<dependency>
 			<groupId>com.condation.cms</groupId>
 			<artifactId>cms-api</artifactId>
