--- a/.gitignore
+++ b/.gitignore
@@ -69,3 +69,4 @@ test-server/hosts/features/data/
 .DS_Store
 test-server/mail-server/fake-smtp-server-2.4.2.jar
 modules/api-module/src/test/resources/site/data
+integration-tests/hosts/test/data
