--- a/.gitignore
+++ b/.gitignore
@@ -47,6 +47,7 @@ test-server/hosts/demo/modules_data/ui-module
 test-server/hosts/demo/temp/
 test-server/hosts/demo/data/
 test-server/hosts/demo_spa/data/
+test-server/hosts/demo_de/data/
 test-server/hosts/features/modules_data/
 test-server/hosts/features/temp
 test-server/hosts/features_de/modules_data/
