--- a/test-server/hosts/demo/site.toml
+++ b/test-server/hosts/demo/site.toml
@@ -26,3 +26,13 @@ target = "/Users/thorstenmarx/entwicklung/backups"
 
 [cache]
 content = true
+
+[translation]
+enabled = true
+language = ["de", "en"]
+
+[translation.mapping.de]
+site = demo-de-site
+
+[translation.mapping.en]
+site = demo-site
