add tanslation properties, let file actios be called in other site

--- a/test-server/hosts/demo/site.toml
+++ b/test-server/hosts/demo/site.toml
@@ -29,10 +29,12 @@ content = true
 
 [translation]
 enabled = true
-language = ["de", "en"]
+languages = ["de", "en"]
 
-[translation.mapping.de]
-site = demo-de-site
+[[translation.mapping]]
+language = "de"
+site = "demo-de-site"
 
-[translation.mapping.en]
-site = demo-site
+[[translation.mapping]]
+site = "demo-site"
+language = "en"
