--- a/cms-core/pom.xml
+++ b/cms-core/pom.xml
@@ -19,8 +19,14 @@
 			<artifactId>gson</artifactId>
 		</dependency>
 		<dependency>
-			<groupId>org.tomlj</groupId>
-			<artifactId>tomlj</artifactId>
+			<groupId>io.github.wasabithumb</groupId>
+			<artifactId>jtoml</artifactId>
+			<version>1.3.0</version>
+		</dependency>
+		<dependency>
+			<groupId>io.github.wasabithumb</groupId>
+			<artifactId>jtoml-serializer-gson</artifactId>
+			<version>1.3.0</version>
 		</dependency>
 		<dependency>
 			<groupId>org.projectlombok</groupId>
